# Wallet-API

./: .env.example.py  .gitignore  LICENSE  README.md  manage.py  pyproject.toml  test_client.http
api/users/: apps.py  models.py  permissions.py  serializers.py  signals.py  urls.py  views.py
api/users/migrations/: 0001_initial.py  0002_alter_customuser_avatar.py  0003_alter_customuser_avatar.py
api/wallet/: apps.py  models.py  permissions.py  serializers.py  urls.py  views.py
api/wallet/migrations/: 0001_initial.py  0002_wallettransaction.py  0003_userwallet_previous_balance_and_more.py  0004_transferpin.py  0005_alter_accountnumber_hashed_and_more.py  0006_withdraw.py
api/wallet/services/: utils.py  wallet_service.py
api/wallet/services/payment/: payment.py  utils.py
base_config/: asgi.py  jwt_settings.py  settings.py  urls.py  wsgi.py
